Change snap logo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body style="overflow: auto;">
 
   <div class="container">
-    <img src="./assets/snapchat-logo.svg" alt="Snapchat Logo">
+    <img alt="logo" class="snap-logo" src="https://images.ctfassets.net/ub38vssza5h3/5ZqVZZn7ZaDXf4xZoJNhjn/e40447a8fb42ee5c635d79c53c192da6/AR_Logo_Updated.png?q=40">
     <h1 style="text-align: center;">WebAR Workshop: Creating AR with Camera Kit for Web @ Snap AR Studio</h1>
     <p class="text-content">Thursday, October 12 · 3 - 6pm CEST</p>
     <p class="text-content">STATION F, 5 Parv. Alan Turing, 75013 Paris</p>
